RESOLVED FIXED31842
getParameter(STENCIL_VALUE_MASK) (and others) returns the wrong value
https://bugs.webkit.org/show_bug.cgi?id=31842
Summary getParameter(STENCIL_VALUE_MASK) (and others) returns the wrong value
Chris Marrin
Reported 2009-11-24 11:52:23 PST
When value is 0xFFFFFFFF, implementation returns 18446744073709552000, which I think is 0xFFFFFFFFFFFFFFFF with rounding.
Attachments
patch (7.26 KB, patch)
2010-08-12 15:43 PDT, Zhenyao Mo
dglazkov: review+
zmo: commit-queue-
Chris Marrin
Comment 1 2009-11-24 12:00:19 PST
This bug caused LayoutTests/fast/canvas/webgl/gl-get-calls.html to fail. These tests have been removed until this bug is fixed
Zhenyao Mo
Comment 2 2010-08-12 15:43:14 PDT
Zhenyao Mo
Comment 3 2010-08-12 15:43:36 PDT
Test is in sync with khronos conformance tests.
Kenneth Russell
Comment 4 2010-08-12 16:03:06 PDT
Comment on attachment 64274 [details] patch Looks good.
Dimitri Glazkov (Google)
Comment 5 2010-08-12 16:09:12 PDT
Comment on attachment 64274 [details] patch ok.
Zhenyao Mo
Comment 6 2010-08-12 16:14:39 PDT
Note You need to log in before you can comment on or make changes to this bug.