2010-08-12  Zhenyao Mo  <zmo@google.com>

Reviewed by Dimitri Glazkov.

        getParameter(STENCIL_VALUE_MASK) (and others) returns the wrong value
        https://bugs.webkit.org/show_bug.cgi?id=31842

        * html/canvas/WebGLRenderingContext.cpp:
        (WebCore::WebGLRenderingContext::getUnsignedLongParameter): Casting from int to unsigned long correctly.
2010-08-12  Zhenyao Mo  <zmo@google.com>

        Reviewed by Dimitri Glazkov.

        getParameter(STENCIL_VALUE_MASK) (and others) returns the wrong value
        https://bugs.webkit.org/show_bug.cgi?id=31842

        * fast/canvas/webgl/gl-get-calls-expected.txt: Bring back the commented out STENCIL tests.
        * fast/canvas/webgl/gl-get-calls.html: Ditto.


Canonical link: https://commits.webkit.org/56079@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65279 268f45cc-cd09-0410-ab3c-d52691b4dbfc